samples/_failures_safe/1761444319_490677_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df79187a.c: In function ‘main’:
./samples/SAFE/__tmp_df79187a.c:153:17: error: expected expression at end of input
  153 |                 } else if (
      |                 ^
./samples/SAFE/__tmp_df79187a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df79187a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df79187a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df79187a.c:153:17: error: expected declaration or statement at end of input
